--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -1,11 +1,16 @@
 version: v1
 plugins:
   - name: go
-    out: pkg
+    out: pkg/api
     opt:
       - paths=source_relative
   - name: go-grpc
-    out: pkg
+    out: pkg/api
     opt:
       - paths=source_relative
+  - name: grpc-gateway
+    out: pkg/api
+    opt:
+      - paths=source_relative
+      - generate_unbound_methods=true
 
