--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -13,4 +13,6 @@ plugins:
     opt:
       - paths=source_relative
       - generate_unbound_methods=true
+  - name: openapiv2
+    out: pkg/openapiv2
 
